# Snakegame

./: .gitignore  CMakeLists.txt  README.md  Snake.cpp  Snake.hpp  build.sh  main.cpp  structure.txt  stucture
data/: map1.txt  map2.txt  map3.txt  map4.txt
include/: Config.hpp  Gate.hpp  Item.hpp  Map.hpp  ScoreBoard.hpp  Snake.hpp
snake_game_project/: CMakeLists.txt
snake_game_project/include/: Snake.hpp
snake_game_project/src/: ScoreBoard.cpp  Snake.cpp
src/: Config.cpp  Gate.cpp  Item.cpp  Map.cpp  ScoreBoard.cpp  Snake.cpp  main.cpp
